[gd_scene load_steps=2 format=3 uid="uid://ommrowqy7lvm"]

[ext_resource type="Script" path="res://twilight-city/scripts/pauseMenu.gd" id="1_7i6bt"]

[node name="pauseMenu" type="CanvasLayer"]
process_mode = 3

[node name="Pause" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_7i6bt")

[node name="PanelContainer" type="PanelContainer" parent="Pause"]
offset_right = 1147.0
offset_bottom = 648.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="Pause/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="Pause/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="gameTitle" type="Label" parent="Pause/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Twilite City"

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume" type="Button" parent="Pause/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="Pause/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="MainMenu" type="Button" parent="Pause/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Quit" type="Button" parent="Pause/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Pause/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Pause/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Resume" to="Pause" method="_on_resume_pressed"]
[connection signal="pressed" from="Pause/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Options" to="Pause" method="_on_options_pressed"]
[connection signal="pressed" from="Pause/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/MainMenu" to="Pause" method="_on_main_pressed"]
[connection signal="pressed" from="Pause/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/Quit" to="Pause" method="_on_quit_pressed"]
